--- a/public/update-bookings/update-bookings-page.css
+++ b/public/update-bookings/update-bookings-page.css
@@ -305,5 +305,73 @@ footer p {
     margin-bottom: 2rem;
   }
 }
+#confirm-booking-modal .modal-content .modal-body .confirm-booking-title {
+  padding-left: 10px;
+  font-size: 1.1rem;
+}
+
+#confirm-booking-details {
+  width: 100%;
+}
+#confirm-booking-details .form-groups {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 16px;
+  background: #f3f4f6;
+  padding: 20px;
+  padding-top: 5px;
+  border-radius: 8px;
+  width: 100%;
+}
+#confirm-booking-details .form-groups .form-group {
+  flex: 1 1 calc(50% - 16px);
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+}
+#confirm-booking-details .form-groups .form-group label {
+  font-weight: bold;
+  color: #4b5563;
+  margin-bottom: 4px;
+}
+#confirm-booking-details .form-groups .form-group p {
+  background: white;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #4b5563;
+  margin: 0;
+}
+#confirm-booking-details .form-groups .form-group p.empty {
+  color: rgba(128, 128, 128, 0.552);
+}
+#confirm-booking-details .form-groups .note {
+  flex: 1 1 100%;
+}
+#confirm-booking-details .submit-btn {
+  background-color: #eab308;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  width: 100%;
+  margin-top: 15px;
+}
+#confirm-booking-details .submit-btn:hover {
+  background-color: #ca8a04;
+}
+#confirm-booking-details .submit-btn .spinner-border {
+  display: flex;
+  height: 18.4px;
+  width: 18.4px;
+  color: white;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  #confirm-booking-details .form-group {
+    flex: 1 1 100%;
+  }
+}
 
 /*# sourceMappingURL=update-bookings-page.css.map */
