--- a/src_backend/views/update-bookings/main.ejs
+++ b/src_backend/views/update-bookings/main.ejs
@@ -95,6 +95,7 @@
         </div>
         <% } %>
 
+        <input type="text" hidden name="Status" value="<%= reservation.Status %>">
         <input type="text" hidden name="ReservationID" value="<%= reservation.ReservationID %>">
         <div class="form-group full-name">
           <label for="full-name-input">Họ và tên</label>
