temp -add lịch nghỉ

--- a/src_backend/views/partials/page-header.ejs
+++ b/src_backend/views/partials/page-header.ejs
@@ -11,6 +11,13 @@
       </li>
 
       <li>
+        <a href="/admin/working-hours" class="nav-item">
+          <i class="bi bi-clock"></i>
+          <span>Quản lý thời gian</span>
+        </a>
+      </li>
+
+      <li>
         <a href="/api/admin/logout" class="nav-item" id="logout-btn">
           <i class="bi bi-box-arrow-right"></i>
           <span>Đăng xuất</span>
