--- a/src_backend/views/reservation/main.ejs
+++ b/src_backend/views/reservation/main.ejs
@@ -64,14 +64,14 @@
 
   <section id="booking" class="booking">
     <h4 class="section-title">Đặt Bàn</h4>
-    <form id="booking-form" class="card">
+    <form id="booking-form" class="card" novalidate>
       <div class="form-group full-name">
         <label for="full-name-input">Họ và tên</label>
         <input type="text" id="full-name-input" name="full-name" placeholder="Nhập họ và tên">
       </div>
       <div class="form-group email">
         <label for="email-input">Email</label>
-        <input type="email" id="email-input" name="email" placeholder="Nhập email của bạn">
+        <input type="text" id="email-input" name="email" placeholder="Nhập email của bạn">
       </div>
       <div class="form-group phone">
         <label for="phone-input">Số điện thoại</label>
