--- a/src_backend/views/admin/all-bookings/main.ejs
+++ b/src_backend/views/admin/all-bookings/main.ejs
@@ -118,11 +118,24 @@
             <i class="bi bi-clipboard-check"></i>
             <span>Duyệt đơn</span>
           </button>
+          <button type="button" class="action-btn" id="cancel-booking-btn"
+            data-kb-booking-data="<%= JSON.stringify({ReservationID,Cus_FullName,Cus_Phone,ArrivalTime,NumAdults,NumChildren,Note,Status,CreatedAt,TablesList,reject_reason}) %>"
+            onclick="showConfirmCancelBookingModal(event)">
+            <i class="bi bi-trash"></i>
+            <span>Hủy đơn</span>
+          </button>
+          <% } else if (Status === 'Approved') { %>
           <button type="button" class="action-btn" id="complete-booking-btn"
             data-kb-booking-data="<%= JSON.stringify({ReservationID,Cus_FullName,Cus_Phone,ArrivalTime,NumAdults,NumChildren,Note,Status,CreatedAt,TablesList,reject_reason}) %>"
             onclick="showConfirmCompleteBookingModal(event)">
             <i class="bi bi-check-circle"></i>
             <span>Hoàn thành đơn</span>
+          </button>
+          <button type="button" class="action-btn" id="reject-booking-btn"
+            data-kb-booking-data="<%= JSON.stringify({ReservationID,Cus_FullName,Cus_Phone,ArrivalTime,NumAdults,NumChildren,Note,Status,CreatedAt,TablesList,reject_reason}) %>"
+            onclick="showConfirmRejectBookingModal(event)">
+            <i class="bi bi-x-lg"></i>
+            <span>Từ chối đơn</span>
           </button>
           <button type="button" class="action-btn" id="cancel-booking-btn"
             data-kb-booking-data="<%= JSON.stringify({ReservationID,Cus_FullName,Cus_Phone,ArrivalTime,NumAdults,NumChildren,Note,Status,CreatedAt,TablesList,reject_reason}) %>"
