--- a/src_backend/views/update-bookings/otp-form/main.ejs
+++ b/src_backend/views/update-bookings/otp-form/main.ejs
@@ -41,10 +41,10 @@
                 <i class="bi bi-arrow-clockwise me-2"></i>
                 Gửi lại mã OTP
               </a>
-              <a href="/update-bookings/email-form?ReservationID=<%= ReservationID %>" class="btn btn-outline-secondary">
+              <!-- <a href="/update-bookings/email-form?ReservationID=<%= ReservationID %>" class="btn btn-outline-secondary">
                 <i class="bi bi-arrow-left me-2"></i>
                 Thay đổi email
-              </a>
+              </a> -->
             </div>
           </form>
         </div>
