fixing test cases

--- a/src_backend/views/bookings-history/main.ejs
+++ b/src_backend/views/bookings-history/main.ejs
@@ -1,3 +1,5 @@
+<!-- at route /bookings-history -->
+
 <main id="main-section">
   <section class="title-section">
     <h3>Tra cứu đơn đặt bàn</h3>
