--- a/src_backend/views/update-bookings/otp-form/main.ejs
+++ b/src_backend/views/update-bookings/otp-form/main.ejs
@@ -13,7 +13,7 @@
           <p class="text-center fw-bold text-primary-color mb-4"><%= email %></p>
 
           <% if (error) { %>
-          <div class="flex align-items-center alert alert-danger" role="alert">
+          <div class="flex align-items-center alert alert-danger" role="alert" id="error-message">
             <i class="bi bi-exclamation-triangle-fill me-2"></i>
             <%= error %>
           </div>
@@ -37,7 +37,8 @@
                 <i class="bi bi-check-circle me-2"></i>
                 Xác thực
               </button>
-              <a href="/update-bookings/resend-otp?ReservationID=<%= ReservationID %>" class="btn btn-outline-secondary">
+              <a href="/update-bookings/resend-otp?ReservationID=<%= ReservationID %>" id="resend-otp-btn"
+                class="btn btn-outline-secondary">
                 <i class="bi bi-arrow-clockwise me-2"></i>
                 Gửi lại mã OTP
               </a>
@@ -54,3 +55,4 @@
 </main>
 
 <div id="app-error-message" hidden data-error="<%= error %>"></div>
+<div id="app-is-resend-otp" hidden data-is-resend-otp="<%= isResendOTP %>"></div>
