--- a/src_backend/views/update-bookings/main.ejs
+++ b/src_backend/views/update-bookings/main.ejs
@@ -93,6 +93,18 @@
             <span class="text-content">Đã hoàn thành đơn</span>
           </div>
         </div>
+        <% } else if (reservation.Status === 'Rejected') { %>
+        <div class="status-overlay rejected">
+          <div class="background">
+            <span class="text-content">Đã từ chối đơn</span>
+          </div>
+        </div>
+        <% } else if (reservation.Status === 'Approved') { %>
+        <div class="status-overlay approved">
+          <div class="background">
+            <span class="text-content">Đã duyệt đơn</span>
+          </div>
+        </div>
         <% } %>
 
         <input type="text" hidden name="Status" value="<%= reservation.Status %>">
@@ -139,7 +151,7 @@
           <textarea id="note-input" name="Note" rows="3" class="form-field"
             placeholder="Nhập ghi chú cho nhà hàng..."><%= reservation.Note %></textarea>
         </div>
-        <% if (reservation.Status !== 'Cancelled' && reservation.Status !== 'Completed') { %>
+        <% if (reservation.Status === 'Pending') { %>
         <button type="submit">Cập nhật đơn đặt bàn</button>
         <% } %>
       </form>
