--- a/public/update-bookings/update-bookings-page.scss
+++ b/public/update-bookings/update-bookings-page.scss
@@ -73,7 +73,7 @@
               color: #ef4444;
             }
 
-            &.status-arrived {
+            &.status-completed {
               color: #10b981;
             }
           }
@@ -118,14 +118,14 @@
           .text-content {
             font-size: 1.5rem;
             font-weight: bold;
-            text-transform: uppercase;
             letter-spacing: 2px;
             text-shadow: 2px 2px 4px rgba(255, 255, 255);
             transform: rotate(-15deg);
             z-index: 20;
           }
 
-          &.completed {
+          &.completed,
+          &.approved {
             .background {
               border: 6px dashed gs.$dark-bg;
             }
@@ -133,7 +133,8 @@
               color: gs.$dark-bg;
             }
           }
-          &.cancelled {
+          &.cancelled,
+          &.rejected {
             .background {
               border: 6px dashed red;
             }
@@ -243,88 +244,87 @@
   }
 }
 
-
 #confirm-booking-modal {
-   .modal-content {
-      .modal-body {
-         .confirm-booking-title {
-            padding-left: 10px;
-            font-size: 1.1rem;
-         }
+  .modal-content {
+    .modal-body {
+      .confirm-booking-title {
+        padding-left: 10px;
+        font-size: 1.1rem;
       }
-   }
+    }
+  }
 }
 
 #confirm-booking-details {
-   width: 100%;
+  width: 100%;
 
-   .form-groups {
+  .form-groups {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 16px;
+    background: gs.$light-bg;
+    padding: 20px;
+    padding-top: 5px;
+    border-radius: 8px;
+    width: 100%;
+
+    .form-group {
+      flex: 1 1 calc(50% - 16px);
       display: flex;
-      flex-wrap: wrap;
-      column-gap: 16px;
-      background: gs.$light-bg;
-      padding: 20px;
-      padding-top: 5px;
-      border-radius: 8px;
-      width: 100%;
-
-      .form-group {
-         flex: 1 1 calc(50% - 16px);
-         display: flex;
-         flex-direction: column;
-         margin-top: 15px;
-
-         label {
-            font-weight: bold;
-            color: gs.$gray;
-            margin-bottom: 4px;
-         }
-
-         p {
-            background: white;
-            padding: 8px;
-            border-radius: 4px;
-            border: 1px solid gs.$gray;
-            margin: 0;
-
-            &.empty {
-               color: rgba(128, 128, 128, 0.552);
-            }
-         }
-      }
-
-      .note {
-         flex: 1 1 100%;
-      }
-   }
-
-   .submit-btn {
-      background-color: gs.$primary-color;
-      color: white;
-      padding: 10px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-      width: 100%;
+      flex-direction: column;
       margin-top: 15px;
 
-      &:hover {
-         background-color: gs.$primary-hover;
+      label {
+        font-weight: bold;
+        color: gs.$gray;
+        margin-bottom: 4px;
       }
 
-      .spinner-border {
-         display: flex;
-         height: 18.4px;
-         width: 18.4px;
-         color: white;
-         margin: 0 auto;
-      }
-   }
+      p {
+        background: white;
+        padding: 8px;
+        border-radius: 4px;
+        border: 1px solid gs.$gray;
+        margin: 0;
 
-   @media (max-width: 768px) {
-      .form-group {
-         flex: 1 1 100%;
+        &.empty {
+          color: rgba(128, 128, 128, 0.552);
+        }
       }
-   }
+    }
+
+    .note {
+      flex: 1 1 100%;
+    }
+  }
+
+  .submit-btn {
+    background-color: gs.$primary-color;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    width: 100%;
+    margin-top: 15px;
+
+    &:hover {
+      background-color: gs.$primary-hover;
+    }
+
+    .spinner-border {
+      display: flex;
+      height: 18.4px;
+      width: 18.4px;
+      color: white;
+      margin: 0 auto;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .form-group {
+      flex: 1 1 100%;
+    }
+  }
 }
